--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 aes-gcm = "0.10.3"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core", "digest"] }
 hkdf = "0.12.4"
+hmac = "0.12.1"
 rand_core = { version = "0.9.2", features = ["os_rng"] }
 sha2 = "0.10.8"
 thiserror = "2.0.11"
