--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2024"
 
 [dependencies]
 aes-gcm = "0.10.3"
+base64 = { version = "0.22.1", features = ["std"] }
 ed25519-dalek = { version = "2.1.1", features = ["rand_core", "digest"] }
 hkdf = "0.12.4"
 hmac = "0.12.1"
-rand_core = { version = "0.9.2", features = ["os_rng"] }
+rand = { version = "0.9.0", features = ["os_rng"] }
 sha2 = "0.10.8"
 thiserror = "2.0.11"
 x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
