--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "zealot"
 description = "An implementation of the signal protocol"
-repository = "https://github.com/jimmielovell/zealot"
+repository = "https://github.com/watfoe/zealot"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
@@ -9,7 +9,6 @@ license = "MIT"
 [lints.rust]
 unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
 unsafe_code = "deny"
-missing_docs = "warn"
 dead_code = "deny"
 trivial_casts = "deny"
 trivial_numeric_casts = "deny"
